--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -1,3 +1,81 @@
-body {
-    background-color: blueviolet;
+/* @import url(https://fonts.googleapis.com/css?family=Montserrat); */
+
+
+body{
+  background-color: rgb(29,29,29);
+  font-family: Montserrat;
+  
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+svg {
+    display: block;
+    font: 11.5em 'Montserrat';
+    width: 960px;
+    height: 300px;
+    margin: 0 auto;
+    
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+	stroke: #800086;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: #4B4BBC;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #0073DC;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #0092E4;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #00C4BF;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
+
+.bg-dark {
+    background-color: rgb(29,29,29)!important;
+}
+.dropdown-menu {
+    color: #ffffff;
+    background-color: rgb(29,29,29);
+    border: none;
+}
+
+.dropdown-item {
+    padding: 1.5%;
+    color: #ffffff;
+}
+.dropdown-item:hover {
+    background-color: rgb(29,29,29);
+    opacity: .5;
+    color: #ffffff;
 }
