--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -2,9 +2,15 @@
 
 
 body {
-  background-color: rgb(29,29,29);
-  font-family: Montserrat;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(29,29,29);
+    font-family: Montserrat;
 }
+/* .header {
+    width: 100%;
+    height: 100vh;
+} */
 
 /* Particle Javascript */
 #particles-js {
@@ -62,7 +68,8 @@ svg {
     100% {stroke-dashoffset: -35%;}
 }
 /* Text Animations End */
-  
+
+/* Nav Menu */
 .bg-dark {
     background-color: rgb(29,29,29)!important;
 }
@@ -80,3 +87,35 @@ svg {
     background-color: rgb(29,29,29);
     color: #ffffff;
 }
+
+/* Image Slide Show */
+.carousel-item {
+    /* padding-top: 20px; */
+    /* z-index: -1; */
+    margin-top: 105vh;
+    height: 65vh;
+    min-height: 350px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    margin-top: 100vh;
+    /* height: 10px; */
+}
+
+
+
+/* Section/About */
+.trial {
+    /* padding-top: 105vh; */
+    margin-top: 5%;
+    padding-bottom: 10%;
+    height: 100%;
+    width: 100%;
+    color: #ffffff;
+    
+}
+
