--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -7,7 +7,7 @@ html {
 body {
     width: 100%;
     height: 100%;
-    background-color: rgb(29,29,29);
+    background-color: rgb(40,44,47);
     font-family: Montserrat;
 }
 /* .header {
@@ -75,11 +75,11 @@ svg {
 
 /* Nav Menu */
 .bg-dark {
-    background-color: rgb(29,29,29)!important;
+    background-color: rgb(40,44,47)!important;
 }
 .dropdown-menu {
     color: #ffffff;
-    background-color: rgb(29,29,29);
+    background-color: rgb(40,44,47);
     border: none;
 }
 
@@ -88,7 +88,7 @@ svg {
     color: rgba(255,255,255,.5);
 }
 .dropdown-item:hover {
-    background-color: rgb(29,29,29);
+    background-color: rgb(40,44,47);
     color: #ffffff;
 }
 
@@ -117,5 +117,10 @@ svg {
     width: 100%;
     color: #ffffff;
     
+}
+
+footer {
+    position: static;
+    position: bottom;
 }
 
