--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -11,11 +11,12 @@ body {
 
 
 /*----------------- Nav Menu ---------------*/
-.navbar {
-    border-bottom: 5px solid rgb(29,29,29);
-}
+/* .navbar {
+    border-bottom: 5px solid transparent;
+} */
 .bg-dark {
-    background-color: rgb(29,29,29)!important;
+    background: rgb(29,29,29)!important;
+/* background: linear-gradient(0deg, rgba(33,37,43,1) 0%, rgba(29,29,29,1) 30%)!important; */
 }
 .dropdown-menu {
     /* padding-top: 10%; */
@@ -91,6 +92,7 @@ header {
 }
 .header-text {
     font-size: 3em;
+    font-weight: 700;
 }
 .header-icons i {
     padding: .5%;
@@ -102,7 +104,7 @@ header {
     cursor: grab;
     /* position: absolute; */
     background: rgb(29,29,29);
-    background: linear-gradient(0deg, rgba(29,29,29,1) 10%, rgba(33,37,43,1) 100%);
+    background: linear-gradient(0deg, rgba(29,29,29,1) 30%, rgba(33,37,43,1) 95%);
     /* width: 200vh; */
     /* height: 100vh; */
     z-index: 2;
@@ -111,11 +113,11 @@ header {
 
 .header-wrapper {
     cursor: default;
-    opacity: .8;
+    /* opacity: .8; */
     position: absolute;
     width: 50%;
     height: 50%;
-    
+    /* z-index: 0; */
     /* background-color: rgb(40,44,47, .5); */
     margin-left: 25%;
     color: white;
@@ -144,7 +146,9 @@ header {
 /* ------------------Section/About -----------------*/
 
 #about-section {
-    background-color: rgb(33,37,43);
+    /* background-color: rgb(33,37,43); */
+    background: rgb(29,29,29);
+    background: linear-gradient(0deg, rgba(33,37,43,1) 30%, rgba(29,29,29,1) 85% );
     /* width: 100vh; */
 }
 
