--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -172,6 +172,10 @@ img {
     /* background: rgb(29,29,29); */
     background-color: linear-gradient(0deg, rgba(33,37,43,1) 30%, rgba(29,29,29,1) 85% );
 }
+div.about-me {
+    border-radius: 0;
+    background-color: rgba(20,20,20,.7);
+}
 
 
 .about-me {
