--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -176,7 +176,7 @@ img {
 
 .test {
     position: absolute;
-    padding: 5%;
+    padding-top: 2%;
     /* background: rgb(29,29,29); */
     background-color: linear-gradient(0deg, rgba(33,37,43,1) 30%, rgba(29,29,29,1) 85% );
 }
