--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -140,6 +140,9 @@ header {
     -o-background-size: cover;
     background-size: cover;
 }
+/* .carousel-control-prev {
+    z-index: 1;
+} */
 
 
 
