added more projects

--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -134,14 +134,14 @@ header {
     z-index: 1;
 } */
 
-iframe {
+/* iframe {
     border-radius: 60px;
-}
+} */
 
-.gist-data {
+/* .gist-data {
     height: 25%;
     width: 100%; 
-}
+} */
 
 
 /* ------------------Section/About -----------------*/
