--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -94,7 +94,6 @@ header {
     line-height: 1.3em;
     font-size: 3em;
     font-weight: 800;
-    /* margin-bottom: 2%; */
 }
 .header-icons i {
     margin-top: 10%;
@@ -105,26 +104,35 @@ header {
 
 .header-wrapper {
     cursor: default;
-    /* z-index: 2; */
-    /* opacity: .8; */
     position: absolute;
     width: 50%;
     height: 50%;
-    /* background-color: rgb(40,44,47, .5); */
     margin-left: 25%;
-    color: white;
+    color: #fff;
 }
 
 
 /* --------------Image Slide Show -------------------*/
 
+.githubIcons {
+    color: #fff;
+    font-size: 1.3em;
+}
+.githubIcons:hover {
+    color: #ff4681;
+}
+#bamazon {
+    padding-left: 10px;
+    padding-right: 2px;
+    width: 640px;
+    height: 525px;
+}
+
 .carousel-item {
-    /* margin-top: 105vh; */
     height: 100vh;
     min-height: 350px;
     background: rgb(29,29,29) no-repeat center center scroll;
     background: linear-gradient(350deg, rgba(29,29,29,1) 20%, rgba(33,37,43,1)  88% );
-    /* background: rgb(40,44,52) ; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -151,13 +159,11 @@ header {
     background: rgb(29,29,29);
     background: linear-gradient(350deg, rgba(33,37,43,1) 10%, rgba(29,29,29,1) 75% );
     color: #fff;
-    /* opacity: .1; */
     z-index: 0;
-    /* position: absolute; */
 }
 
 img {
-    width: 100%;
+    width: 75%;
     margin-bottom: 2%;
 }
 #about-section {
@@ -171,7 +177,6 @@ img {
 .test {
     position: absolute;
     padding-top: 2%;
-    /* background: rgb(29,29,29); */
     background-color: linear-gradient(0deg, rgba(33,37,43,1) 30%, rgba(29,29,29,1) 85% );
 }
 div.about-me {
@@ -186,7 +191,6 @@ div.about-me {
 .about-me {
     padding: 4%;
     display: flex;
-  /* flex-direction: row-reverse; */
     align-items: center;
     justify-content: center;
     flex-wrap: nowrap;
