--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -13,6 +13,10 @@ section {
     background: linear-gradient(350deg, rgba(33,37,43,1) 10%, rgba(29,29,29,1) 75% );
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 /*----------------- Nav Menu ---------------*/
 
 .navbar-dark .navbar-nav .nav-link:hover {
@@ -114,6 +118,9 @@ header {
     margin-left: 25%;
     color: #fff;
 }
+header:active {
+    cursor: grabbing;
+}
 
 
 /* --------------Image Slide Show -------------------*/
@@ -124,6 +131,7 @@ header {
 }
 .githubIcons:hover {
     color: #ff4681;
+    cursor: pointer;
 }
 /* #bamazon {
     padding-left: 10px;
@@ -139,7 +147,7 @@ header {
 /* ------------------Section/About -----------------*/
 #particles-js2 {
     /* cursor: grab; */
-    height: 200vh;
+    height: 207vh;
     width: 100vw;
     /* background: rgb(29,29,29);
     background: linear-gradient(350deg, rgba(33,37,43,1) 10%, rgba(29,29,29,1) 75% ); */
@@ -185,6 +193,29 @@ iframe {
     border-radius: 6%;
 }
 
+.glide {
+    margin-top: 10%;
+}
+
+.glideCursor {
+    cursor: grab;
+} 
+.glideCursor:active {
+    cursor: grabbing;
+} 
+/* .fa-chevron-circle-left, .fa-chevron-circle-right {
+ font-size: 1.2em;
+} */
+.fa-chevron-circle-left, .fa-chevron-circle-right, .fa-circle:hover {
+    /* color: #ff4681; */
+    cursor: pointer;
+}
+.fa-chevron-circle-left:active, .fa-chevron-circle-right:active, .fa-circle:active {
+    color: #ff4681;
+}
+
+
+
 @media only screen and (max-width: 935px) {
     .col-7 {
         max-width: 90%;
@@ -193,7 +224,7 @@ iframe {
 }
 @media only screen and (max-width: 840px) {
     #particles-js2 {
-        height: 170vh;
+        height: 301vh;
     }
     .newRow {
         display: inline;
