--- a/Assets/Css/styles.css
+++ b/Assets/Css/styles.css
@@ -1,24 +1,22 @@
-/* @import url(https://fonts.googleapis.com/css?family=Montserrat); */
 html {
     scroll-behavior: smooth;
 }
+
 body {
-    /* width: 100%; */
-    /* height: 100%; */
     background-color: rgb(40,44,47);
     font-family: Montserrat;
 }
-section {
-    background: rgb(29,29,29);
-    background: linear-gradient(350deg, rgba(33,37,43,1) 10%, rgba(29,29,29,1) 75% );
+
+.pink {
+    color: #ff4681; 
 }
 
 a:hover {
     text-decoration: none;
 }
 
-/*----------------- Nav Menu ---------------*/
 
+/*----------------- Nav Menu ---------------*/
 .navbar-dark .navbar-nav .nav-link:hover {
     color: #ff4681; 
 }
@@ -26,8 +24,8 @@ a:hover {
 .bg-dark {
     background: rgb(29,29,29)!important;
 }
+
 .dropdown-menu {
-    
     margin-top: 13%;
     color: #ffffff;
     background-color: rgb(29,29,29);
@@ -38,14 +36,14 @@ a:hover {
     padding-top: 2%;
     color: rgba(255,255,255,.5);
 }
+
 .dropdown-item:hover {
     background-color: rgb(40,44,47, 0.5);
     color: #ffffff;
 }
 
 
-/* ------------ Text Animations Start ------------*/
-
+/* ------------ Name Animation ------------*/
 svg {
     font: 11.5em 'Montserrat';
     width: 250px;
@@ -61,48 +59,47 @@ svg {
 }
 
 .text-copy:nth-child(1){
-	stroke: #ff4681;                    /* #ffffff; */
+	stroke: #ff4681; /* #ffffff; */
 	animation-delay: -1;
 }
 .text-copy:nth-child(2){
-	stroke: #ff4681;                            /* #e3e3e3; */
+	stroke: #ff4681;  /* #e3e3e3; */
 	animation-delay: -2s;
 }
 .text-copy:nth-child(3){
-	stroke: #ff4681;                            /* #b6b6b6; */
+	stroke: #ff4681; /* #b6b6b6; */
 	animation-delay: -3s;
 }
 .text-copy:nth-child(4){
-	stroke: #ff4681;                              /* #8b8b8b; */
+	stroke: #ff4681; /* #8b8b8b; */
 	animation-delay: -4s;
 }
 .text-copy:nth-child(5){
-	stroke: #ff4681;                               /* #5a5959; */
+	stroke: #ff4681; /* #5a5959; */
 	animation-delay: -5s;
 }
 
 @keyframes stroke-offset{
     100% {stroke-dashoffset: -35%;}
 }
-/* ----------- Text Animations End --------------*/
-/* ------------ Nav Menu End --------------------*/
-
+/* ----------- Name Animation End--------------*/
 
 
 /*---------------- Header Section ---------------*/
-/* ---Particle Javascript ---*/
 header {
     cursor: grab;
     background: rgb(29,29,29);
     background: linear-gradient(-350deg, rgba(29,29,29,1) 30%, rgba(33,37,43,1) 95%);
     height: 100vh;
 }
+
 .header-text {
     padding: 2%;
     line-height: 1.3em;
     font-size: 3em;
     font-weight: 800;
 }
+
 .header-icons i {
     margin-top: 10%;
     padding: .5%;
@@ -118,39 +115,22 @@ header {
     margin-left: 25%;
     color: #fff;
 }
+
 header:active {
     cursor: grabbing;
 }
 
 
-/* --------------Image Slide Show -------------------*/
-
-.githubIcons {
-    color: #fff;
-    font-size: 1.3em;
-}
-.githubIcons:hover {
-    color: #ff4681;
-    cursor: pointer;
-}
-/* #bamazon {
-    padding-left: 10px;
-    padding-right: 2px;
-    width: 640px;
-    height: 525px;
-} */
-
-
-
-
-
 /* ------------------Section/About -----------------*/
+section {
+    height: 200%;
+    background: rgb(29,29,29);
+    background: linear-gradient(350deg, rgba(33,37,43,1) 10%, rgba(29,29,29,1) 75% );
+}
+
 #particles-js2 {
-    /* cursor: grab; */
     height: 207vh;
     width: 100vw;
-    /* background: rgb(29,29,29);
-    background: linear-gradient(350deg, rgba(33,37,43,1) 10%, rgba(29,29,29,1) 75% ); */
     color: #fff;
     z-index: 0;
 }
@@ -159,6 +139,7 @@ img {
     width: 75%;
     margin-bottom: 2%;
 }
+
 #about-section {
     z-index: 0;
     cursor: default;
@@ -172,11 +153,13 @@ img {
     padding-top: 2%;
     background-color: linear-gradient(0deg, rgba(33,37,43,1) 30%, rgba(29,29,29,1) 85% );
 }
+
 div.about-me {
     margin-bottom: 2%;
     border-radius: 10px;
     background-color: rgba(22,22,22,.8);
 }
+
 .about-me:hover i {
     color: #ff4681;
 }
@@ -189,6 +172,24 @@ div.about-me {
     flex-wrap: nowrap;
 }
 
+/* --------------Portfolio Things -------------------*/
+.githubIcons {
+    color: #fff;
+    font-size: 1.3em;
+}
+
+.githubIcons:hover {
+    color: #ff4681;
+    cursor: pointer;
+}
+
+/* #bamazon {
+    padding-left: 10px;
+    padding-right: 2px;
+    width: 640px;
+    height: 525px;
+} */
+
 iframe {
     border-radius: 6%;
 }
@@ -200,28 +201,29 @@ iframe {
 .glideCursor {
     cursor: grab;
 } 
+
 .glideCursor:active {
     cursor: grabbing;
 } 
-/* .fa-chevron-circle-left, .fa-chevron-circle-right {
- font-size: 1.2em;
-} */
+
 .fa-chevron-circle-left, .fa-chevron-circle-right, .fa-circle:hover {
     /* color: #ff4681; */
     cursor: pointer;
 }
+
 .fa-chevron-circle-left:active, .fa-chevron-circle-right:active, .fa-circle:active {
     color: #ff4681;
 }
 
 
-
+/*------------------Queries -----------------*/
 @media only screen and (max-width: 935px) {
     .col-7 {
         max-width: 90%;
         margin-left: 5%;
     }
 }
+
 @media only screen and (max-width: 840px) {
     #particles-js2 {
         height: 301vh;
